welcome.lessons.welcome.variables.Variables.scala.error
Variables:6: error: ')' expected but '}' found.
	}
        ^